--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Market</title>
     <link rel="stylesheet" href="styles/flower-market.css">
+    <script src="https://kit.fontawesome.com/b6e8670117.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header>
-
+    <header class="content-body">
+        <nav class="navbar display-flex">
+            <img src="./assets/logo.png" alt="Flower Shop Logo">
+            <ul class="nav-link-container display-flex">
+                <li class="nav-item"><a id="home-color" href="" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link navbar-gray">Shop</a></li>
+                <li class="nav-item"><a href="" class="nav-link navbar-gray">About us</a></li>
+                <li class="nav-item"><a href="" class="nav-link black-color"><i class="fa-solid fa-cart-shopping"></i>
+                        <span id="cart-item">Cart ($56)</span> </a></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
