banner section done

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Market</title>
+    <!-- css link -->
     <link rel="stylesheet" href="styles/flower-market.css">
+    <!-- font awesome link -->
     <script src="https://kit.fontawesome.com/b6e8670117.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="background-color">
     <header class="content-body">
-        <nav class="navbar display-flex">
+        <nav class="navbar display-flex inter-font">
             <img src="./assets/logo.png" alt="Flower Shop Logo">
             <ul class="nav-link-container display-flex">
                 <li class="nav-item"><a id="home-color" href="" class="nav-link">Home</a></li>
@@ -21,6 +23,21 @@
                         <span id="cart-item">Cart ($56)</span> </a></li>
             </ul>
         </nav>
+
+        <!-- Banner section start -->
+        <section class="banner display-flex">
+            <div class="banner-content">
+                <h1 class="banner-title noto-serif-font black-color">ALWAYS <span class="section-title">FRESH
+                        FLOWERS</span></h1>
+                <p class="paragraph-style inter-font gray-color">Indulge your senses with the beauty and fragrance of
+                    our fresh
+                    flower shop.
+                    From classic roses to exotic blooms, we offer a wide variety of fresh flowers that <br> are perfect
+                    for
+                    any occasion. </p>
+            </div>
+            <img src="./assets/hero-flower.png" alt="Banner flower image">
+        </section>
     </header>
     <main>
 
