--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <header class="content-body">
         <nav class="navbar display-flex inter-font">
             <img src="./assets/logo.png" alt="Flower Shop Logo">
-            <ul class="nav-link-container display-flex">
-                <li class="nav-item"><a id="home-color" href="" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="" class="nav-link navbar-gray">Shop</a></li>
-                <li class="nav-item"><a href="" class="nav-link navbar-gray">About us</a></li>
-                <li class="nav-item"><a href="" class="nav-link black-color"><i class="fa-solid fa-cart-shopping"></i>
+            <ul id="cart-icon" class="nav-link-container display-flex">
+                <li class="nav-item hide"><a id="home-color" href="" class="nav-link">Home</a></li>
+                <li class="nav-item hide"><a href="" class="nav-link navbar-gray">Shop</a></li>
+                <li class="nav-item hide"><a href="" class="nav-link navbar-gray">About us</a></li>
+                <li id="cart-layout" class="nav-item"><a href=""
+                        class="nav-link black-color display-flex cart-container"><i
+                            class="fa-solid fa-cart-shopping"></i>
                         <span id="cart-item">Cart ($56)</span> </a></li>
             </ul>
         </nav>
@@ -27,20 +29,83 @@
         <!-- Banner section start -->
         <section class="banner display-flex">
             <div class="banner-content">
-                <h1 class="banner-title noto-serif-font black-color">ALWAYS <span class="section-title">FRESH
+                <h1 class="banner-title noto-serif-font black-color">ALWAYS <span class="section-title">FRESH <br>
                         FLOWERS</span></h1>
-                <p class="paragraph-style inter-font gray-color">Indulge your senses with the beauty and fragrance of
+                <p class="banner-description paragraph-style inter-font gray-color">Indulge your senses with the beauty
+                    and fragrance of
                     our fresh
                     flower shop.
                     From classic roses to exotic blooms, we offer a wide variety of fresh flowers that <br> are perfect
                     for
                     any occasion. </p>
             </div>
-            <img src="./assets/hero-flower.png" alt="Banner flower image">
+            <div class="banner-image">
+                <img src="./assets/hero-flower.png" alt="Banner flower image">
+            </div>
         </section>
     </header>
     <main>
-
+        <!-- Plants section starts -->
+        <section class="plants-section content-body">
+            <div class="plant-content">
+                <h2 class="noto-serif-font section-title-styles"> <span class="section-title">Our</span> Plants</h2>
+                <p class="paragraph-style inter-font gray-color">Indulge your senses with the beauty and fragrance of
+                    our
+                    fresh flower
+                    shop. From <br> classic roses to exotic
+                    blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="plant-cards-container">
+                <div class="plant-card">
+                    <img src="./assets/sample-flower-image.png" alt="Sample Flower Image 1">
+                    <h3 class="inter-font dark-gray-color plant-font-size plant-medium-weight">Lily Blossom</h3>
+                    <h4 class="inter-font dark-gray-color plant-font-size plant-bold-weight">20 USD</h4>
+                    <button class="btn-primary">ADD TO CART</button>
+                </div>
+                <div class="plant-card">
+                    <img src="./assets/sample-flower-image.png" alt="Sample Flower Image 1">
+                    <h3 class="inter-font dark-gray-color plant-font-size plant-medium-weight">Lily Blossom</h3>
+                    <h4 class="inter-font dark-gray-color plant-font-size plant-bold-weight">20 USD</h4>
+                    <button class="btn-primary">ADD TO CART</button>
+                </div>
+                <div class="plant-card">
+                    <img src="./assets/sample-flower-image.png" alt="Sample Flower Image 1">
+                    <h3 class="inter-font dark-gray-color plant-font-size plant-medium-weight">Lily Blossom</h3>
+                    <h4 class="inter-font dark-gray-color plant-font-size plant-bold-weight">20 USD</h4>
+                    <button class="btn-primary">ADD TO CART</button>
+                </div>
+                <div class="plant-card">
+                    <img src="./assets/sample-flower-image.png" alt="Sample Flower Image 1">
+                    <h3 class="inter-font dark-gray-color plant-font-size plant-medium-weight">Lily Blossom</h3>
+                    <h4 class="inter-font dark-gray-color plant-font-size plant-bold-weight">20 USD</h4>
+                    <button class="btn-primary">ADD TO CART</button>
+                </div>
+                <div class="plant-card">
+                    <img src="./assets/sample-flower-image.png" alt="Sample Flower Image 1">
+                    <h3 class="inter-font dark-gray-color plant-font-size plant-medium-weight">Lily Blossom</h3>
+                    <h4 class="inter-font dark-gray-color plant-font-size plant-bold-weight">20 USD</h4>
+                    <button class="btn-primary">ADD TO CART</button>
+                </div>
+                <div class="plant-card">
+                    <img src="./assets/sample-flower-image.png" alt="Sample Flower Image 1">
+                    <h3 class="inter-font dark-gray-color plant-font-size plant-medium-weight">Lily Blossom</h3>
+                    <h4 class="inter-font dark-gray-color plant-font-size plant-bold-weight">20 USD</h4>
+                    <button class="btn-primary">ADD TO CART</button>
+                </div>
+                <div class="plant-card">
+                    <img src="./assets/sample-flower-image.png" alt="Sample Flower Image 1">
+                    <h3 class="inter-font dark-gray-color plant-font-size plant-medium-weight">Lily Blossom</h3>
+                    <h4 class="inter-font dark-gray-color plant-font-size plant-bold-weight">20 USD</h4>
+                    <button class="btn-primary">ADD TO CART</button>
+                </div>
+                <div class="plant-card">
+                    <img src="./assets/sample-flower-image.png" alt="Sample Flower Image 1">
+                    <h3 class="inter-font dark-gray-color plant-font-size plant-medium-weight">Lily Blossom</h3>
+                    <h4 class="inter-font dark-gray-color plant-font-size plant-bold-weight">20 USD</h4>
+                    <button class="btn-primary">ADD TO CART</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
