plants lover section done and made our plants section responsive

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         <!-- Plants section starts -->
         <section class="plants-section content-body">
             <div class="plant-content">
-                <h2 class="noto-serif-font section-title-styles"> <span class="section-title">Our</span> Plants</h2>
-                <p class="paragraph-style inter-font gray-color">Indulge your senses with the beauty and fragrance of
-                    our
-                    fresh flower
-                    shop. From <br> classic roses to exotic
-                    blooms, we offer a wide variety of fresh.</p>
+                <h2 class="noto-serif-font section-title-styles plant-content-title"> <span
+                        class="section-title">Our</span> Plants</h2>
+                <p class="paragraph-style inter-font gray-color plant-content-desciption">Indulge your senses with the
+                    beauty and fragrance of
+                    our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.
+                </p>
             </div>
-            <div class="plant-cards-container">
+            <div class="plant-cards-container text-align-center">
                 <div class="plant-card">
                     <img src="./assets/sample-flower-image.png" alt="Sample Flower Image 1">
                     <h3 class="inter-font dark-gray-color plant-font-size plant-medium-weight">Lily Blossom</h3>
@@ -104,6 +104,24 @@
                     <h4 class="inter-font dark-gray-color plant-font-size plant-bold-weight">20 USD</h4>
                     <button class="btn-primary">ADD TO CART</button>
                 </div>
+            </div>
+        </section>
+
+        <!-- Plants Lover section starts -->
+        <section class="plants-lover-section content-body display-flex">
+            <div id="plants-lover-image">
+                <img src="./assets/flower-store.png" alt="Flower Store image">
+            </div>
+            <div>
+                <h2 class="noto-serif-font black-color section-title-styles">Flower & Plants <br> Lover</h2>
+                <ul class="inter-font gray-color paragraph-style">
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                        to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                        to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                        to exotic blooms, we offer a wide variety of fresh.</li>
+                </ul>
             </div>
         </section>
     </main>
