join section and footer section done

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div id="plants-lover-image">
                 <img src="./assets/flower-store.png" alt="Flower Store image">
             </div>
-            <div>
+            <div class="plants-lover-content">
                 <h2 class="noto-serif-font black-color section-title-styles">Flower & Plants <br> Lover</h2>
                 <ul class="inter-font gray-color paragraph-style">
                     <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
@@ -124,9 +124,54 @@
                 </ul>
             </div>
         </section>
-    </main>
-    <footer>
 
+        <!-- Join section starts -->
+        <section class="join-section">
+            <div class="join-content text-align-center">
+                <h2 class="join-title noto-serif-font section-title-styles">Join the colorful Bunch</h2>
+                <input class="inter-font" type="email" name="" id="email-textbox" placeholder="Write email">
+                <input class="btn-subscribe inter-font" type="submit" value="Subscribe">
+            </div>
+        </section>
+    </main>
+    <footer class="footer-section footer-background-color inter-font">
+        <section class="footer-container display-flex">
+            <div>
+                <img src="./assets/logo.png" alt="Flower Shop Logo">
+                <p class="gray-color paragraph-style">Indulge your senses with the <br> beauty and fragrance
+                    of
+                    our fresh <br> flower
+                    shop. </p>
+            </div>
+            <div>
+                <ul class="footer-display-grid">
+                    <li class="footer-item"><a href="" class="footer-link footer-gray-color">Home</a></li>
+                    <li class="footer-item"><a href="" class="footer-link footer-gray-color">About Us</a></li>
+                    <li class="footer-item"><a href="" class="footer-link footer-gray-color">Blog</a></li>
+                    <li class="footer-item"><a href="" class="footer-link footer-gray-color">FAQ</a></li>
+                    <li class="footer-item"><a href="" class="footer-link footer-gray-color">Contact Us</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul class="footer-display-grid">
+                    <li class="footer-item"><a href="" class="footer-link footer-gray-color">Features</a></li>
+                    <li class="footer-item"><a href="" class="footer-link footer-gray-color">Pricing</a></li>
+                    <li class="footer-item"><a href="" class="footer-link footer-gray-color">Privacy Policy</a></li>
+                    <li class="footer-item"><a href="" class="footer-link footer-gray-color">Terms of Service</a></li>
+                    <li class="footer-item"><a href="" class="footer-link footer-gray-color">Help Center</a></li>
+                </ul>
+            </div>
+            <div>
+                <a href=""> <img src="./assets/icon-linkedin.png" alt="Linkedin Icon">
+                </a>
+                <a href=""> <img src="./assets/icon-twitter.png" alt="Twitter Icon">
+                </a>
+                <a href=""> <img src="./assets/icon-facebook.png" alt="Facebook Icon">
+                </a>
+                <a href=""> <img src="./assets/icon-youtube.png" alt="Youtube Icon">
+                </a>
+            </div>
+        </section>
     </footer>
 </body>
 
