made footer responsive

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </section>
 
         <!-- Join section starts -->
-        <section class="join-section">
+        <section id="join-margin" class="join-section">
             <div class="join-content text-align-center">
                 <h2 class="join-title noto-serif-font section-title-styles">Join the colorful Bunch</h2>
                 <input class="inter-font" type="email" name="" id="email-textbox" placeholder="Write email">
@@ -134,8 +134,10 @@
             </div>
         </section>
     </main>
+
+    <!-- footer starts -->
     <footer class="footer-section footer-background-color inter-font">
-        <section class="footer-container display-flex">
+        <div class="footer-container display-flex">
             <div>
                 <img src="./assets/logo.png" alt="Flower Shop Logo">
                 <p class="gray-color paragraph-style">Indulge your senses with the <br> beauty and fragrance
@@ -161,17 +163,17 @@
                     <li class="footer-item"><a href="" class="footer-link footer-gray-color">Help Center</a></li>
                 </ul>
             </div>
-            <div>
+            <div class="display-flex icon-container">
                 <a href=""> <img src="./assets/icon-linkedin.png" alt="Linkedin Icon">
                 </a>
-                <a href=""> <img src="./assets/icon-twitter.png" alt="Twitter Icon">
+                <a href=""> <img id="twitter-icon" src="./assets/icon-twitter.png" alt="Twitter Icon">
                 </a>
                 <a href=""> <img src="./assets/icon-facebook.png" alt="Facebook Icon">
                 </a>
                 <a href=""> <img src="./assets/icon-youtube.png" alt="Youtube Icon">
                 </a>
             </div>
-        </section>
+        </div>
     </footer>
 </body>
 
