latest deal section done and made responsive

--- a/index.html
+++ b/index.html
@@ -125,6 +125,42 @@
             </div>
         </section>
 
+        <!-- Latest Deals section starts -->
+        <section class="content-body text-align-center">
+            <div class="latest-deals-content">
+                <h2 class="noto-serif-font section-title-styles latest-deals-content-title"> <span
+                        class="section-title">Latest
+                    </span> Deals</h2>
+                <p class="paragraph-style inter-font gray-color latest-deals-content-desciption">Indulge your senses
+                    with the
+                    beauty and fragrance of our fresh flower shop. From <br> classic roses to
+                    exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="latest-deals-cards-container display-flex white-color">
+                <div class="latest-deals-display-grid">
+                    <div class="latest-deals-bloom-plant">
+                        <!-- <img src="./assets/deal-bloom.png" alt="Bloom plant image"> -->
+                        <!-- <div class="overlay-text">
+                            <h3>60% Off | Bloom Plant</h3>
+                            <p> <a href="">Shop Now</a> </p>
+                        </div> -->
+                        <h3 class="noto-serif-font latest-deals-plant-title">60% Off | Bloom Plant</h3>
+                        <p class="inter-font latest-deals-plant-link"> <a class="white-color" href="">Shop Now</a> </p>
+                    </div>
+                    <div class="latest-deals-ana-plant">
+                        <!-- <img src="./assets/deal-ana.png" alt="Ana plant image"> -->
+                        <h3 class="noto-serif-font latest-deals-plant-title">30% Off | Ana Plant</h3>
+                        <p class="inter-font latest-deals-plant-link"> <a class="white-color" href="">Shop Now</a> </p>
+                    </div>
+                </div>
+                <div class="latest-deals-zabo-plant">
+                    <!-- <img src="./assets/deal-zabo.png" alt="Zabo plant image"> -->
+                    <h3 class="noto-serif-font latest-deals-zabo-title">25% Off | Zabo Plant</h3>
+                    <p class="inter-font latest-deals-zabo-link"> <a class="white-color" href="">Shop Now</a> </p>
+                </div>
+            </div>
+        </section>
+
         <!-- Join section starts -->
         <section id="join-margin" class="join-section">
             <div class="join-content text-align-center">
