added trusted badge and made it responsive

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <!-- Plants Lover section starts -->
         <section class="plants-lover-section content-body display-flex">
             <div id="plants-lover-image">
+                <img class="hide" id="trusted-badge" src="./assets/trusted-badge.png" alt="Trusted Badge Image">
                 <img src="./assets/flower-store.png" alt="Flower Store image">
             </div>
             <div class="plants-lover-content">
